manifests/installation/bare/onex/onex-usercenter/ingressroutetcp.yaml
# Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file. The original repo for
# this file is https://github.com/rosas/onex.
#

apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: onex-usercenter-tcp
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`onex.usercenter.superproj.com`)
    services:
    - name: onex-usercenter
      port: 50090
  tls:
    secretName: onex-traefik-tls
    passthrough: true
